spacing issue css updations

--- a/src/app/web/training/training.component.css
+++ b/src/app/web/training/training.component.css
@@ -1,5 +1,5 @@
 section{
-    padding-block: 4rem;
+    padding-block: 3em;
     color: #fff;
 }
 .whychoose{
